@@ -14,10 +14,13 @@ Revision history for Perl extension Bitcoin::Crypto.
 	[Improvements]
 	- transactions can now be created without registering UTXOs beforehand (with limited functionality)
 	- format descriptions now also handle base64
-	- Bitcoin::Crypto::Util::get_path_info now returns instances of Bitcoin::Crypto::DerivationPath (internal structure remains unchanged)
 	- extended keys can now be derived by directly passing Bitcoin::Crypto::DerivationPath
 	- exception is no longer raised if the default network is among multiple possible networks after deserialization of WIFs and extended keys
 	- module can now be configured to work in single-network mode, disallowing creation of objects with different networks
+
+	[Changes]
+	- codes in Bitcoin::Crypto::Script::Opcode are now integers instead of bytestrings of length 1
+	- Bitcoin::Crypto::Util::get_path_info now returns instances of Bitcoin::Crypto::DerivationPath (internal structure remains unchanged)
 
 2.004 Tue Apr 23 2024
 	[Improvements]
